<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">CuteGIF</string>
  <string name="tap_anywhere_to_select_a_video">Tap to select video</string>
  <string name="about">About</string>
  <string name="close">Close</string>
  <string name="color_quality">Color quality</string>
  <string name="frame_rate">Frame rate</string>
  <string name="playback_speed">Playback speed</string>
  <string name="resolution">Resolution</string>
  <string name="done">Done</string>
  <string name="share">Share</string>
  <string name="version_X">Version %s</string>
  <string name="_144p">144P</string>
  <string name="_240p">240P</string>
  <string name="_320p">320P</string>
  <string name="join_qq_group_toast">QQ group ID has been copied to the clipboard</string>
  <string name="convert_video_to_gif_simple_and_fast_in_main">Video to GIF</string>
  <string name="crop_free">Free</string>
  <string name="crop_square">Square</string>
  <string name="gif_duration_s">GIF duration: %s seconds</string>
  <string name="effect_needs_to_be_viewed_after_exporting">ℹ️ The effects of %s needs to be viewed after exporting</string>
  <string name="beta_info">The current version is for testing purposes only and may contain bugs. \nThe internal test will end in %d days. After the end, please download the official version from my WeChat account.</string>
  <string name="developer_name_email">Developer: 沈科光 (tasy5kg@qq.com)</string>
  <string name="files">Files</string>
  <string name="photos">Photos</string>
  <string name="float_window">Window</string>
  <string name="edit_text">Edit text</string>
  <string name="bold">Bold</string>
  <string name="italic">Italic</string>
  <string name="alignment_direction">Alignment direction</string>
  <string name="rotate">Rotate</string>
  <string name="color">Color</string>
  <string name="input_text_here">Input text here</string>
  <string name="sorry_cutegif_error">Sorry, there was an error while running CuteGIF. \nI hope you can send the problem log to the developer\'s WeChat public account [光光可爱小仙女] so that this error can be fixed.</string>
  <string name="error_log">Error log</string>
  <string name="copy_to_clipboard">Copy to clipboard</string>
  <string name="follow_wechat_to_feedback">Follow my WeChat public account [光光可爱小仙女] to provide feedback</string>
  <string name="exit">Exit</string>
  <string name="beta_ended_please_follow_wechat">The internal testing of the current version has ended. Please follow my WeChat official account and download the official version to continue using it.</string>
  <string name="follow_wechat_to_download_release">Follow my WeChat account</string>
  <string name="donate">Donate</string>
  <string name="donate_support">Donate</string>
  <string name="if_you_like_cutegif_please_donate">If you like CuteGIF, please donate to me to support me in developing more useful Apps!</string>
  <string name="thanks_to_the_following_donated_users">Thanks to the following donated users:</string>
  <string name="you_can_write_your_nickname">You can write your nickname in the payment remark so that your nickname will be displayed in this list when this software is updated.</string>
  <string name="save_donate_qrcode_open_wechat_scan">Save the QR code</string>
  <string name="_eula_">"User Agreement"</string>
  <string name="eula_line_1">Welcome to use CuteGIF!</string>
  <string name="eula_line_2">CuteGIF is an open source, ad-free, free-to-use GIF processing software developed by 沈科光.</string>
  <string name="eula_line_3">Disclaimer: This software is provided as is without warranty of any kind. The author is not responsible for any damages, claims or other liability arising out of the use or otherwise of the software.</string>
  <string name="_privacy_policy_">"Privacy Policy"</string>
  <string name="privacy_policy_line_1">This software does not connect to the Internet, does not require any permissions, and does not collect any personal information.</string>
  <string name="accept_license_above_to_use">Please read and agree to the above terms to start using it.</string>
  <string name="agree">Agree</string>
  <string name="gif_saved_to_gallery">GIF saved to gallery</string>
  <string name="delete">Delete</string>
  <string name="follow_wechat">Follow my WeChat public account</string>
  <string name="follow_my_wechat">Follow my WeChat public account</string>
  <string name="follow_wechat_line_1">Follow my WeChat public account [光光可爱小仙女] to download and update CuteGIF more conveniently. \nIf you have any questions or suggestions, you can also send me a message on the official account. I will read every message.</string>
  <string name="save_qrcode_open_wechat_scan">Save the QR code</string>
  <string name="gif_split">GIF Split</string>
  <string name="save_this_frame">Save this frame</string>
  <string name="previous_frame">Previous frame</string>
  <string name="next_frame">Next frame</string>
  <string name="converting_to_video_0_percent">Converting to video (0%)</string>
  <string name="converting_to_video_d_percent">Converting to video (%d%%)</string>
  <string name="mvimg_to_gif">Motion Photo to GIF</string>
  <string name="stabilization">Stabilization</string>
  <string name="cancel">Cancel</string>
  <string name="_import">Import</string>
  <string name="gif_to_video">GIF to Video</string>
  <string name="follow">Follow</string>
  <string name="source_code_of_cutegif_">CuteGIF source code:</string>
  <string name="open_source_project_used_">This software uses the following open source projects:</string>
  <string name="edit_video">Edit video</string>
  <string name="export">Export</string>
  <string name="crop_ratio_">Ratio</string>
  <string name="text">Text</string>
  <string name="go_previous_0_1_seconds">0.1 seconds forward</string>
  <string name="go_next_0_1_seconds">0.1 seconds backward</string>
  <string name="transcoding_video">Transcoding video</string>
  <string name="transcoding_video__d_">Transcoding video (%d%%)</string>
  <string name="got_it">Got it</string>
  <string name="whats_new">What\'s new</string>
  <string name="whats_new_2023_3">Motion Photo to GIF function</string>
  <string name="whats_new_t1">Timeline fine-tuning</string>
  <string name="whats_new_b1">When cropping video clips, you can fine-tune the timeline left and right, accurate to 0.1 seconds.</string>
  <string name="whats_new_t2">More GIF export options</string>
  <string name="whats_new_b2">When exporting GIFs, you can now freely select the resolution and choose more levels of clarity and color quality.</string>
  <string name="whats_new_t3">Remove background function</string>
  <string name="whats_new_b3">A new "Remove background" function has been added to the GIF export interface.</string>
  <string name="whats_new_t4">Performance optimization and bug fixes</string>
  <string name="whats_new_b4">The code has been completely overhauled and the performance is faster. \nFixed the issue where the exported GIF screen would be completely black when the video duration was too short. \nFixed the problem of the software crashing when importing some videos.</string>
  <string name="crop_ratio__">Crop ratio</string>
  <string name="custom__">Customize:</string>
  <string name="clarity">Clarity</string>
  <string name="low">Low</string>
  <string name="mid">Mid</string>
  <string name="high">High</string>
  <string name="max">Max</string>
  <string name="more_options">More options</string>
  <string name="remove_background">Remove background</string>
  <string name="reverse">Reverse</string>
  <string name="final_pause">Final pause</string>
  <string name="color_key">Color key</string>
  <string name="selected_color">Selected color</string>
  <string name="preview__">Preview</string>
  <string name="_similarity_">Similarity</string>
  <string name="blend__">Blend</string>
  <string name="some_apps_do_not_support_above_10_fps">⚠️ Some software will drop frames when playing GIFs with a frame rate greater than 10</string>
  <string name="loading_file_d_seconds_please_wait">Loading file, it may take about %d seconds, please wait…</string>
  <string name="open_source_license">Open source license</string>
  <string name="eula_and_privacy_policy">User Agreement and Privacy Policy</string>
  <string name="rotate_d_degrees">Rotate %d°</string>
  <string name="copied_to_clipboard">Copied to clipboard</string>
  <string name="you_have_read_agreed_eula_to_withdraw">You have read and agreed to the above agreement. To withdraw your consent, please uninstall the software.</string>
  <string name="language_item_separator_normal">,&#160;</string>
  <string name="language_item_separator_last">&#160;and&#160;</string>
  <string name="click_on_the_preview_image_to_pick_an_color">Click on the preview image to pick an color</string>
  <string name="cancelled">Cancelled</string>
  <string name="file_deleted">File deleted</string>
  <string name="file_size_s">File size: %s</string>
  <string name="_ext__saved_to_gallery">"%s has been saved to the gallery"</string>
  <string name="saved_this_frame_to_gallery">This frame has been saved</string>
  <string name="unable_to_read_video">Unable to load video</string>
  <string name="____brackets____">(%s)</string>
  <string name="video_selection_method">Video selector</string>
  <string name="failed_to_enable_stabilization">Failed to enable stabilization</string>
  <string name="enabling_stabilization">Enabling stabilization…</string>
  <string name="seems_not_a_mvimg">This doesn\'t seem to be a Motion Photo. Try another photo.</string>
  <string name="an_error_occurred">An error occurred</string>
  <string name="compressing_gif_raw_size">Compressing GIF…(Raw size: %s)</string>
  <string name="exporting_gif_">Exporting GIF…</string>
  <string name="loading_video">Loading video</string>
  <string name="unable_to_load_gif">Unable to load GIF</string>
  <string name="gif_to_video_conversion_failed">GIF to video conversion failed</string>
  <string name="wechat_follow_qrcode_saved_please_scan_first_image">My Wechat account QR code has been saved, please scan the first picture in your gallery</string>
  <string name="wechat_donate_qrcode_saved_please_scan_first_image">Wechat donation QR code has been saved, please scan the first picture in your gallery</string>
  <string name="wechat_donate_qrcode_saved_wechat_launch_failed">Wechat donation QR code has been saved</string>
  <string name="wechat_follow_qrcode_saved_wechat_launch_failed">My Wechat account QR code has been saved</string>
  <string name="crop_4_3" translatable="false">4:3</string>
  <string name="crop_16_9" translatable="false">16:9</string>
  <string name="qq_group_id" translatable="false">729757909</string>
  <string name="_donated_users_list" translatable="false">\@华 @Z*g @张先森 @禽兽养殖二厂</string>
  <string name="github_com_tasy5kg_cutegif" translatable="false">github.com/tasy5kg/CuteGIF</string>
  <string name="_open_source_project_used_links" translatable="false">github.com/androidx/androidx\ngithub.com/material-components/material-components-android\ngithub.com/bumptech/glide\ngithub.com/CanHub/Android-Image-Cropper\ngithub.com/arthenica/ffmpeg-kit\ngithub.com/Tencent/MMKV\ngithub.com/kohler/gifsicle\ngithub.com/santaevpavel/OutlineSpan</string>
  <string name="eula_line_addition">This software is for learning and communication purposes. It does not access the network and does not provide Internet information services.</string>
</resources>