<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  tools:context=".OpenSourceLicenseActivity">

  <androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="16dp"
      android:layout_marginTop="16dp"
      android:autoLink="web"
      android:text="@string/source_code_of_cutegif_"
      android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
      android:textIsSelectable="true" />

    <com.google.android.material.textview.MaterialTextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="16dp"
      android:layout_marginBottom="16dp"
      android:autoLink="web"
      android:text="@string/github_com_tasy5kg_cutegif"
      android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
      android:textIsSelectable="true" />

    <include layout="@layout/view_divider_horizontal" />

    <com.google.android.material.textview.MaterialTextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="16dp"
      android:layout_marginTop="16dp"
      android:autoLink="web"
      android:text="@string/open_source_project_used_"
      android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
      android:textIsSelectable="true" />

    <com.google.android.material.textview.MaterialTextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="16dp"
      android:layout_marginBottom="16dp"
      android:autoLink="web"
      android:text="@string/_open_source_project_used_links"
      android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
      android:textIsSelectable="true" />

    <include layout="@layout/view_divider_horizontal" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/mbDone"
      style="@style/Widget.Material3.Button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:text="@string/done"
      android:textColor="?attr/colorOnSurface" />
  </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>