<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  tools:context=".DonateActivity">

  <androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:animateLayoutChanges="true"
    android:gravity="center_vertical">

    <com.google.android.material.button.MaterialButton
      android:id="@+id/mbBack"
      style="@style/Widget.Material3.Button.IconButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:animateLayoutChanges="true"
      app:icon="@drawable/ic_baseline_close_24"
      app:iconTint="@color/dark" />

    <com.google.android.material.textview.MaterialTextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:animateLayoutChanges="true"
      android:gravity="start"
      android:text="@string/donate"
      android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
      android:textColor="@color/dark" />

  </androidx.appcompat.widget.LinearLayoutCompat>

  <include layout="@layout/view_divider_horizontal" />

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1">

    <androidx.appcompat.widget.LinearLayoutCompat
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="12dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/if_you_like_cutegif_please_donate"
          android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

        <androidx.appcompat.widget.AppCompatImageView
          android:layout_width="match_parent"
          android:layout_height="256dp"
          android:layout_centerInParent="true"
          android:layout_gravity="center"
          android:layout_marginVertical="12dp"
          app:srcCompat="@raw/donate_wechat" />

        <com.google.android.material.textview.MaterialTextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/thanks_to_the_following_donated_users"
          android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
          android:textIsSelectable="true" />

        <com.google.android.material.textview.MaterialTextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="4dp"
          android:text="@string/_donated_users_list"
          android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
          android:textIsSelectable="true" />


        <com.google.android.material.textview.MaterialTextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/you_can_write_your_nickname"
          android:textAppearance="@style/TextAppearance.Material3.BodySmall"
          android:textColor="@color/grey" />

      </androidx.appcompat.widget.LinearLayoutCompat>

      <include layout="@layout/view_divider_horizontal" />

      <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <com.google.android.material.button.MaterialButton
          android:id="@+id/mbClose"
          style="@style/Widget.Material3.Button.OutlinedButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/close"
          android:textColor="?attr/colorOnSurface" />

        <com.google.android.material.button.MaterialButton
          android:id="@+id/mbStartDonating"
          style="@style/Widget.Material3.Button"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="8dp"
          android:layout_weight="1"
          android:text="@string/save_donate_qrcode_open_wechat_scan"
          android:textColor="?attr/colorOnSurface" />
      </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
  </androidx.core.widget.NestedScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>