<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".bottom.sheet.BottomSheetVideoToGif2CropRatio">

  <androidx.appcompat.widget.LinearLayoutCompat
    android:id="@+id/standard_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="48dp">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

    <androidx.appcompat.widget.LinearLayoutCompat
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_vertical"
      android:minHeight="64dp"
      android:orientation="horizontal"
      android:paddingHorizontal="24dp">

      <com.google.android.material.textview.MaterialTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="画面比例"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

      <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/mbtg_crop_ratio"
        style="@style/Widget.MaterialComponents.MaterialButtonToggleGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2.5"
        android:padding="0dp"
        app:checkedButton="@id/mb_crop_ratio_free"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
          android:id="@+id/mb_crop_ratio_free"
          style="@style/Theme.CuteGif.SegmentedButton"
          android:text="@string/crop_free" />

        <com.google.android.material.button.MaterialButton
          android:id="@+id/mb_crop_ratio_square"
          style="@style/Theme.CuteGif.SegmentedButton"
          android:text="@string/crop_square" />

        <com.google.android.material.button.MaterialButton
          android:id="@+id/mb_crop_ratio_4_3"
          style="@style/Theme.CuteGif.SegmentedButton"
          android:text="@string/crop_4_3" />

        <com.google.android.material.button.MaterialButton
          android:id="@+id/mb_crop_ratio_16_9"
          style="@style/Theme.CuteGif.SegmentedButton"
          android:text="@string/crop_16_9" />

      </com.google.android.material.button.MaterialButtonToggleGroup>

    </androidx.appcompat.widget.LinearLayoutCompat>

  </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.coordinatorlayout.widget.CoordinatorLayout>