<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".AboutActivity">

  <androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="16dp"
      android:layout_marginVertical="12dp"
      android:gravity="center_vertical"
      android:orientation="horizontal">

      <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:srcCompat="@mipmap/ic_launcher" />

      <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:gravity="center_vertical"
        android:orientation="vertical">


        <com.google.android.material.textview.MaterialTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/app_name"
          android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

        <com.google.android.material.textview.MaterialTextView
          android:id="@+id/mtvVersionInfo"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="4dp"
          android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
          android:textColor="@color/grey"
          tools:ignore="TextContrastCheck"
          tools:text="Version X" />

      </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <include layout="@layout/view_divider_horizontal" />

    <androidx.appcompat.widget.LinearLayoutCompat
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="16dp"
      android:animateLayoutChanges="true"
      android:gravity="center_vertical"
      android:minHeight="64dp"
      android:orientation="horizontal">

      <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:animateLayoutChanges="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
          android:id="@+id/mtvImageQuality"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:animateLayoutChanges="true"
          android:text="@string/video_selection_method"
          android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

      </androidx.appcompat.widget.LinearLayoutCompat>

      <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/mbtgChooseFileWay"
        style="@style/Widget.MaterialComponents.MaterialButtonToggleGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2.0"
        android:animateLayoutChanges="true"
        android:padding="0dp"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
          android:id="@+id/mbChooseFileWayDocument"
          style="@style/Theme.CuteGif.SegmentedButton"
          android:animateLayoutChanges="true"
          android:text="@string/files" />

        <com.google.android.material.button.MaterialButton
          android:id="@+id/mbChooseFileWayGallery"
          style="@style/Theme.CuteGif.SegmentedButton"
          android:animateLayoutChanges="true"
          android:text="@string/photos" />

        <com.google.android.material.button.MaterialButton
          android:id="@+id/mbChooseFileWay13"
          style="@style/Theme.CuteGif.SegmentedButton"
          android:animateLayoutChanges="true"
          android:text="@string/float_window" />


      </com.google.android.material.button.MaterialButtonToggleGroup>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <!--

        <include layout="@layout/view_divider_horizontal" />

        <com.google.android.material.textview.MaterialTextView
          android:id="@+id/mtvJoinQqGroup"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="?android:attr/selectableItemBackground"
          android:clickable="true"
          android:focusable="true"
          android:gravity="center_vertical"
          android:minHeight="64dp"
          android:paddingHorizontal="16dp"
          android:text="加入 QQ 群，交流反馈"
          android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

        <include layout="@layout/view_divider_horizontal" />-->

    <include layout="@layout/view_divider_horizontal" />

    <com.google.android.material.textview.MaterialTextView
      android:id="@+id/mtvLegalInfo"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:gravity="center"
      android:paddingHorizontal="16dp"
      android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
      android:textColor="@color/grey"
      tools:text="用户协议 | 隐私政策 | 开源许可" />

    <com.google.android.material.textview.MaterialTextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="6dp"
      android:gravity="center"
      android:paddingHorizontal="16dp"
      android:text="@string/developer_name_email"
      android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
      android:textColor="@color/grey"
      android:textIsSelectable="true" />


    <com.google.android.material.button.MaterialButton
      android:id="@+id/mbDone"
      style="@style/Widget.Material3.Button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:text="@string/done"
      android:textColor="?attr/colorOnSurface" />
  </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>